--- a/src/CountryApp/css/Country.module.css
+++ b/src/CountryApp/css/Country.module.css
@@ -1,8 +1,12 @@
+.card-wrapper {
+    text-decoration: none;
+}
 .card {
     border-radius: 5px;
     overflow: hidden;
     background-color: rgb(250, 250, 250);
     transition: all 0.3s;
+    cursor: pointer;
 }
 .card:hover {
   transform: scale(1.1);
@@ -60,4 +64,9 @@
 .btn:hover {
     background-color: coral;
     color: whitesmoke;
+}
+.actions {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
