--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -6,6 +6,7 @@
     border: 2px solid black;
     border-radius: 2px;
     background-color: rgb(250, 250, 250);
+    text-decoration: none;
 }
 .cart p {
     margin: 0;
