--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -1,3 +1,12 @@
+.form-wrapper {
+    margin: 0 15%;
+    padding: 20px 5%;
+    background-color: white;
+    height: 100%;
+}
+.form-wrapper h2 {
+    text-align: center;
+}
 .form {
     margin: 50px 0;
 }
@@ -24,7 +33,8 @@
     border: 0;
     border-radius: 4px;
     cursor: pointer;
-    background-color: rgb(250, 250, 250);
+    background-color: whitesmoke;
+    transition: all 300ms;
 }
 .form button:hover {
     background-color: #4CAF50;
